--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   http: ^0.13.5
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
