--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.5
   http: ^0.13.5
   flutter_rating_bar: ^4.0.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
