--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   http: ^0.13.5
   flutter_rating_bar: ^4.0.1
   google_fonts: ^3.0.1
+  firebase_core: 
+  firebase_auth: ^4.1.1
+  cloud_firestore: 
 
 dev_dependencies:
   flutter_test:
